Move files to root directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-/.eslintrc.js
-/activeLearning
-/assessments
-/beginnings
-/calculator
-/experiments
-/loops
-/node_modules
-/notes
-/numberGame
-/package-lock.json
-/package.json
-/randomCircles
-/sillyStoryApp
-/variablesTest
-/vite-project
+node_modules
+.DS_Store
+dist
+dist-ssr
+*.local
